small changes in initial fetching of challenges, fixing card description not showing right

--- a/app/peli/page.module.css
+++ b/app/peli/page.module.css
@@ -2,7 +2,7 @@
   .container {
     text-align: center;
     background-color: #010535;
-    background-image: url('../images/partybg.jpg');
+    background-image: url(../images/partybg.jpg);
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
@@ -11,7 +11,7 @@
   }
 
   .logo {
-    background-image: url('../images/Villa_Kamppa_transparent2.png');
+    background-image: url(../images/Villa_Kamppa_transparent2.png);
     background-size: auto auto;
     background-position: center center;
     background-repeat: no-repeat;
@@ -25,7 +25,7 @@
     align-items: center;
     padding: 20px;
     user-select:none;
-    background-image: url('../images/partybg.jpg');
+    background-image: url(../images/partybg.jpg);
   }
   
   .form {
